objects/AT_Workspace__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>Identify the primary customer application associated with this opportunity.</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AT_Technology__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Backup-Cohesity</fullName>
                </value>
                <value>
                    <fullName>Back up-CommVault</fullName>
                </value>
                <value>
                    <fullName>Back up-Veeam</fullName>
                </value>
                <value>
                    <fullName>Big Data–Analytics</fullName>
                </value>
                <value>
                    <fullName>Big Data-Cloudera</fullName>
                </value>
                <value>
                    <fullName>Big Data-Hortonworks</fullName>
                </value>
                <value>
                    <fullName>Big Data-IBM BigInsights</fullName>
                </value>
                <value>
                    <fullName>Big Data-MapR</fullName>
                </value>
                <value>
                    <fullName>Big Data-Microstrategy</fullName>
                </value>
                <value>
                    <fullName>Big Data-Other</fullName>
                </value>
                <value>
                    <fullName>Big Data–SAS</fullName>
                </value>
                <value>
                    <fullName>Big Data–Splunk</fullName>
                </value>
                <value>
                    <fullName>BM COS-OS</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Custom-Business Analytics/Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Custom-Business Process/Decision Making Engine</fullName>
                </value>
                <value>
                    <fullName>Custom-Infrastructure application/File,Print,Directory</fullName>
                </value>
                <value>
                    <fullName>Custom-Middleware</fullName>
                </value>
                <value>
                    <fullName>Custom-Online Transaction Processing/Database</fullName>
                </value>
                <value>
                    <fullName>Custom-Other</fullName>
                </value>
                <value>
                    <fullName>Custom-Web Front-end/Presentation</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization/VDI-Citrix (XenDesktop, XenApp)</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization/VDI-Other</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization/VDI-Vmware (View, Horizon)</fullName>
                </value>
                <value>
                    <fullName>Docker Container</fullName>
                </value>
                <value>
                    <fullName>Greenplum</fullName>
                </value>
                <value>
                    <fullName>Healthcare-Allscripts</fullName>
                </value>
                <value>
                    <fullName>Healthcare-Cerner</fullName>
                </value>
                <value>
                    <fullName>Healthcare-Eclipsys(Allscripts)</fullName>
                </value>
                <value>
                    <fullName>Healthcare-EPIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>Identify the customer’s primary compelling business reason for this opportunity or initiative.</description>
        <label>Business Driver</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AT_Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Application Deployment</fullName>
                </value>
                <value>
                    <fullName>Application Integration</fullName>
                </value>
                <value>
                    <fullName>B2B-Virtual Expert FSI</fullName>
                </value>
                <value>
                    <fullName>B2B-Virtual Expert MFG</fullName>
                </value>
                <value>
                    <fullName>B2B-Virtual Expert PUB&amp;Healthcare</fullName>
                </value>
                <value>
                    <fullName>B2C-Video Transformation</fullName>
                </value>
                <value>
                    <fullName>BYOD</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>DC Physical space limitation</fullName>
                </value>
                <value>
                    <fullName>DC Power limitation</fullName>
                </value>
                <value>
                    <fullName>Dell Migration to UCS</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization/VDI on UCS</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>FCoE</fullName>
                </value>
                <value>
                    <fullName>High Performance Computing</fullName>
                </value>
                <value>
                    <fullName>HP Migration to UCS</fullName>
                </value>
                <value>
                    <fullName>IBM Migration to UCS</fullName>
                </value>
                <value>
                    <fullName>LAN/SAN Consolidation</fullName>
                </value>
                <value>
                    <fullName>Lifecycle Mgmt(Installed Base Upgrade)</fullName>
                </value>
                <value>
                    <fullName>Midmarket Acceleration</fullName>
                </value>
                <value>
                    <fullName>Migration 1G -&gt; 10G</fullName>
                </value>
                <value>
                    <fullName>Migration Catalyst -&gt; Nexus</fullName>
                </value>
                <value>
                    <fullName>Migration Mainframe to x86</fullName>
                </value>
                <value>
                    <fullName>Mobile Enterprise</fullName>
                </value>
                <value>
                    <fullName>Multi-Channel Customer Collab</fullName>
                </value>
                <value>
                    <fullName>NewDatacenter/Big Data</fullName>
                </value>
                <value>
                    <fullName>PF-ABA</fullName>
                </value>
                <value>
                    <fullName>PF-Cross Domain</fullName>
                </value>
                <value>
                    <fullName>PF-MVSO</fullName>
                </value>
                <value>
                    <fullName>PF-NaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Survey_1_Operational_Value__c</fullName>
        <inlineHelpText>I found the Advanced Services engagement to be very valuable in explaining how to operate and maintain the Cisco product(s) involved.</inlineHelpText>
        <label>CSS Survey 1 - Operational Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Survey_2_Integration_Value__c</fullName>
        <inlineHelpText>I found the Advanced Services engagement to be very valuable in explaining how to integrate the Cisco product(s) involved into my existing security infrastructure and operations.</inlineHelpText>
        <label>CSS Survey 2 - Integration Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Survey_3_Engagement_Value__c</fullName>
        <inlineHelpText>Overall, I found the Advanced Services engagement to be very valuable in helping me to understand how to get the most out of my deployed system(s).</inlineHelpText>
        <label>CSS Survey 3 - Engagement Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Survey_4_Technology_Value__c</fullName>
        <inlineHelpText>The associated Cisco security technolog(ies) is/are very valuable to my organization’s overall security program.</inlineHelpText>
        <label>CSS Survey 4 - Technology Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_Services_Customer__c</fullName>
        <description>Is combined services part of the offer?  If so, what is the multiplication ratio?</description>
        <label>Combined Services Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>1.7</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>1.9</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compare_Bk_Date__c</fullName>
        <formula>IF(AT_Expected_Book_Date__c == Opportunity__r.CloseDate, IMAGE("/resource/WSBookDateEqualToOpp", "Same" ,16, 16),
IF(AT_Expected_Book_Date__c &gt; Opportunity__r.CloseDate, IMAGE("/resource/WSbookDateLaterToOpp", "WS Book Date &gt; Opp", 16, 16),IMAGE("/resource/OppBookDateLaterToWS", "Opp Book Date &gt; WS", 16, 16)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Bk Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Book_Date__c</fullName>
        <formula>IF(AT_Expected_Book_Date__c == Opportunity__r.CloseDate, "Same-Expected Book Date",
IF(AT_Expected_Book_Date__c &gt; Opportunity__r.CloseDate,  "WS Later than Opp",
"Opp Later than WS"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Book Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Fcst_Stat__c</fullName>
        <formula>IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Upside', IMAGE("/resource/WSFSCommitToOppUpside","WS = Commit | Opp = Upside", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Not Forecastable',	IMAGE("/resource/WSFSCommitToOppNotForcast","WS = Commit | Opp = NF", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Commit', IMAGE("/resource/WSFSUpsideToOppCommit","WS = Upside | Opp = Commit", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Not Forecastable', IMAGE("/resource/WSFSUpsideToOppNotForecast","WS = Upside | Opp = NF", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c =='Commit', IMAGE("/resource/WSFSNotForecastToOppCommit","WS = NF | Opp = Commit", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c =='Upside', IMAGE("/resource/WSFSNotForecastToOppUpside","WS = NF | Opp = Upside", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Commit', IMAGE("/resource/WSFSCommitToOppCommit","Same | Commit", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Upside', IMAGE("/resource/WSFSUpsideToOppUpside","Same | Upside", 16, 16), 
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c == 'Not Forecastable',IMAGE("/resource/WSFSNotForecastToOppNotForecast","Same | NF",16, 16),'') 
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Fcst Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Forecast_Status__c</fullName>
        <formula>IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Upside',           "WS:Comm-Opp:Up",
IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Not Forecastable', "WS:Comm-Opp:N-F",
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Commit',           "WS:Up-Opp:Comm",
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Not Forecastable', "WS:Up-Opp:N-F",
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c =='Commit', "WS:N-F-Opp:Comm",
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c =='Upside', "WS:N-F-Opp:Up",
IF(TEXT(AT_Forecast_Status__c) = 'Commit' &amp;&amp; forecast_status__c =='Commit',           "Same-Commit",
IF(TEXT(AT_Forecast_Status__c) = 'Upside' &amp;&amp; forecast_status__c =='Upside',           "Same-Upside",
IF(TEXT(AT_Forecast_Status__c) = 'Not Forecastable' &amp;&amp; forecast_status__c =='Not Forecastable', "Same-Not-Forecastable",'')
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Forecast Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Stat__c</fullName>
        <formula>IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Active'),IMAGE("/resource/WAOA","A", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Booked'),IMAGE("/resource/WAOB","B", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Cancelled'),IMAGE("/resource/WAOC","C", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Lost'),IMAGE("/resource/WAOL","L", 16, 16),

IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Active'),IMAGE("/resource/WBOA","A", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Booked'),IMAGE("/resource/WBOB","B", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Cancelled'),IMAGE("/resource/WBOC","C", 16, 16),
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Lost'),IMAGE("/resource/WBOL","L", 16, 16),


IF(((TEXT(PSS_Workspace_Status__c) = 'Cancelled' || TEXT(PSS_Workspace_Status__c) = 'Lost') &amp;&amp; Opportunity_Status__c = 'Active'),IMAGE("/resource/WCLOA","A", 16, 16),
IF(((TEXT(PSS_Workspace_Status__c) = 'Cancelled' || TEXT(PSS_Workspace_Status__c) = 'Lost')&amp;&amp; Opportunity_Status__c = 'Booked'),IMAGE("/resource/WCLOB","B", 16, 16),
IF(((TEXT(PSS_Workspace_Status__c) = 'Cancelled' || TEXT(PSS_Workspace_Status__c) = 'Lost')&amp;&amp; Opportunity_Status__c = 'Cancelled'),IMAGE("/resource/WCLOC","C", 16, 16),
IF(((TEXT(PSS_Workspace_Status__c) = 'Cancelled' || TEXT(PSS_Workspace_Status__c) = 'Lost')&amp;&amp; Opportunity_Status__c = 'Lost'),IMAGE("/resource/WCLOL","L", 16, 16),
''
))))))))))))</formula>
        <label>Compare Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Status__c</fullName>
        <formula>IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Active'),"Same-Active", 
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Booked'),"WS:Active-Opp:Booked", 
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Cancelled'),"WS:Active-Opp:Cancel", 
IF((TEXT(PSS_Workspace_Status__c) = 'Active' &amp;&amp; Opportunity_Status__c = 'Lost'),"WS:Active-Opp:Lost",

IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Active'),"WS:Booked-Opp:Active", 
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Booked'),"Same-Booked", 
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Cancelled'),"WS:Booked-Opp:Cancel", 
IF((TEXT(PSS_Workspace_Status__c) = 'Booked' &amp;&amp; Opportunity_Status__c = 'Lost'),"WS:Booked-Opp:Lost", 

IF((TEXT(PSS_Workspace_Status__c) = 'Cancelled' &amp;&amp; Opportunity_Status__c = 'Active'),"WS:Cancel-Opp:Active", 
IF((TEXT(PSS_Workspace_Status__c) = 'Cancelled' &amp;&amp; Opportunity_Status__c = 'Booked'),"WS:Cancel-Opp:Booked", 
IF((TEXT(PSS_Workspace_Status__c) = 'Cancelled' &amp;&amp; Opportunity_Status__c = 'Lost'),"WS:Cancel-Opp:Lost", 

IF((TEXT(PSS_Workspace_Status__c) = 'Lost' &amp;&amp; Opportunity_Status__c = 'Active'),"WS:Lost-Opp:Active", 
IF((TEXT(PSS_Workspace_Status__c) = 'Lost' &amp;&amp; Opportunity_Status__c = 'Booked'),"WS:Lost-Opp:Booked",
IF((TEXT(PSS_Workspace_Status__c) = 'Lost' &amp;&amp; Opportunity_Status__c = 'Cancelled'),"WS:Lost-Opp:Cancel", 
'Same-L/C'))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Months__c</fullName>
        <description>Contract Length in Months</description>
        <formula>IF(ISBLANK(Workspace_Contract_Expiration_Date__c) &amp;&amp; ISBLANK(Workspace_Contract_Start_Date__c) 
, NULL 
, ( FLOOR((Workspace_Contract_Expiration_Date__c - Workspace_Contract_Start_Date__c)/30)) 
)</formula>
        <label>Contract Length (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Budget_Confirmed__c</fullName>
        <description>Have you confirmed that the customer has budget allocated for the EA?</description>
        <label>Customer Budget Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_POC_Details__c</fullName>
        <inlineHelpText>Customer POC Name, Email,Phone</inlineHelpText>
        <label>Customer POC Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCR_Workspace_Approval_Status__c</fullName>
        <description>DCR workspace approval Status</description>
        <label>DCR Workspace Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to SFDC Users</description>
        <label>Demand Creation Rep (Security Mktg Only)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Workspaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Deal ID of the the Opportunity</description>
        <formula>Opportunity__r.DealID__c</formula>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Info_From_EUIF_Signed__c</fullName>
        <description>Has the End User Information Form (EUIF) been signed by the customer?</description>
        <label>End User Info From (EUIF) Signed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Agreement_Status__c</fullName>
        <description>Red - Dead
White - Priced
Yellow - DSA in CCW/Quote Package
Blue - in SW Forecast
Green - Booked</description>
        <inlineHelpText>Red - Dead
White - Priced
Yellow - DSA in CCW/Quote Package
Blue - in SW Forecast
Green - Booked</inlineHelpText>
        <label>Enterprise Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_Copy_PSS__c</fullName>
        <description>Copy of Fiscal Year field, set by workflow, used to break up long chain of formula fields</description>
        <label>FY Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_Extra_Week_PSS__c</fullName>
        <description>Will have value 1 if the FY has extra week in Q3-M1</description>
        <formula>IF( (MOD( DATE( FY_Copy_PSS__c , 7, 31 ) - DATE( 1900, 1, 7 ), 7 ) = 6) || (FY_Copy_PSS__c == 2016) 
, 1 
, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Extra Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_Start_Date_PSS__c</fullName>
        <description>Date of the first day of PSS expected book date's FY</description>
        <formula>IF( AT_Expected_Book_Date__c &lt; DATE(1999, 8, 1), NULL, 
IF( AT_Expected_Book_Date__c &lt; DATE(2000, 7, 30), DATE(1999, 8, 1), 
IF( AT_Expected_Book_Date__c &lt; DATE(2001, 7, 29), DATE(2000, 7, 30), 
IF( AT_Expected_Book_Date__c &lt; DATE(2002, 7, 28), DATE(2001, 7, 29), 
IF( AT_Expected_Book_Date__c &lt; DATE(2003, 8, 01), DATE(2002, 7, 28), 
IF( AT_Expected_Book_Date__c &lt; DATE(2004, 8, 01), DATE(2003, 7, 27), 
IF( AT_Expected_Book_Date__c &lt; DATE(2005, 7, 31), DATE(2004, 8, 1), 
IF( AT_Expected_Book_Date__c &lt; DATE(2006, 7, 30), DATE(2005, 7, 31), 
IF( AT_Expected_Book_Date__c &lt; DATE(2007, 7, 29), DATE(2006, 7, 30), 
IF( AT_Expected_Book_Date__c &lt; DATE(2008, 7, 27), DATE(2007, 7, 29), 
IF( AT_Expected_Book_Date__c &lt; DATE(2009, 7, 26), DATE(2008, 7, 27), 
IF( AT_Expected_Book_Date__c &lt; DATE(2010, 8,  1), DATE(2009, 7, 26), 
IF( AT_Expected_Book_Date__c &lt; DATE(2011, 7, 31), DATE(2010, 8, 1), 
IF( AT_Expected_Book_Date__c &lt; DATE(2012, 7, 29), DATE(2011, 7, 31), 
IF( AT_Expected_Book_Date__c &lt; DATE(2013, 7, 28), DATE(2012, 7, 29), 
IF( AT_Expected_Book_Date__c &lt; DATE(2014, 7, 27), DATE(2013, 7, 28), 
IF( AT_Expected_Book_Date__c &lt; DATE(2015, 7, 26), DATE(2014, 7, 27), 
IF( AT_Expected_Book_Date__c &lt; DATE(2016, 7, 31), DATE(2015, 7, 26), 
IF( AT_Expected_Book_Date__c &lt; DATE(2017, 7, 30), DATE(2016, 7, 31), 
IF( AT_Expected_Book_Date__c &lt; DATE(2018, 7, 29), DATE(2017, 7, 30), 
IF( AT_Expected_Book_Date__c &lt; DATE(2019, 7, 28), DATE(2018, 7, 29), 
IF( AT_Expected_Book_Date__c &lt; DATE(2020, 7, 26), DATE(2019, 7, 28), 
DATE(2020, 7, 26)))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Customer_Approver__c</fullName>
        <description>Do you know who needs to approve the deal to get it closed?</description>
        <label>Final Customer Approver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defined</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Month_PSS__c</fullName>
        <description>Calculates Fiscal Month of PSS expected book date</description>
        <formula>(Fiscal_Quarter_PSS__c - 1) * 3 + (Fiscal_Month_of_QTR_PSS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_of_QTR_PSS__c</fullName>
        <description>The week number in the fiscal year of the PSS Expected Book Date</description>
        <formula>IF( Fiscal_Week_PSS__c &lt;= 30,
Case (MOD( Fiscal_Week_PSS__c,13),
0,3,9,3,10,3,11,3,12,3,
1,1,2,1,3,1,4,1,
2
),
IF( Fiscal_Week_PSS__c &gt;= 32,
Case (MOD( Fiscal_Week_PSS__c - FY_Extra_Week_PSS__c,13),
0,3,9,3,10,3,11,3,12,3,
1,1,2,1,3,1,4,1,
2
),
IF(FY_Extra_Week_PSS__c = 0, 2, 1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Month of QTR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period_PSS__c</fullName>
        <description>This formula will determine which quarter and fiscal year an opportunity is scheduled to close in. The displayed result will be in the format of Qx-2xxx.</description>
        <formula>IF ( ISNULL( FY_Copy_PSS__c ), '','Q' &amp; TEXT(Fiscal_Quarter_PSS__c) &amp; '-' &amp; Fiscal_Year_PSS__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter_PSS__c</fullName>
        <description>Fiscal QTRn of PSS Expected Book Date</description>
        <formula>IF( Fiscal_Week_PSS__c &lt;= 13, 1,
IF( Fiscal_Week_PSS__c &lt;= 26, 2,
IF( Fiscal_Week_PSS__c &lt;= 39 + FY_Extra_Week_PSS__c , 3,
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week_PSS__c</fullName>
        <description>Fiscal Week number(Julian) of PSS Expected Book Date, set by workflow</description>
        <label>Fiscal Week</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week_of_Month_PSS__c</fullName>
        <description>Fiscal Week on PSS Expected Book Date</description>
        <formula>IF( Fiscal_Week_PSS__c &lt;= 30,
Case (MOD(Fiscal_Week_PSS__c ,13),
0,5,
1,1,5,1,9,1,
2,2,6,2,10,2,
3,3,7,3,11,3,
4
),
IF(Fiscal_Week_PSS__c &gt;= 32,
Case (MOD(Fiscal_Week_PSS__c - FY_Extra_Week_PSS__c ,13),
0,5,
1,1,5,1,9,1,
2,2,6,2,10,2,
3,3,7,3,11,3,
4
),
IF(FY_Extra_Week_PSS__c = 0, 1, 5))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Week of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_PSS__c</fullName>
        <description>Fiscal Year of the PSS Expected Book Date</description>
        <formula>TEXT(YEAR( FY_Start_Date_PSS__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Position_ID__c</fullName>
        <description>Holds forecast Position ID for corresponding selected PSS Team</description>
        <label>Forecast Position ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Multi_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_of_Agreement__c</fullName>
        <description>Formal Letter of Agreement  by Cisco Legal and Customer status</description>
        <label>Letter of Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Partner Exception</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Direct_Team_Workspaces__c</fullName>
        <description>My direct team worspaces</description>
        <formula>IF (My_Workspace__c = 'True' || LOWER($User.Alias) =  LOWER(PSS__r.Reporting_Manager_Level_1_cec__c), "True", "False")</formula>
        <label>My Direct Team Workspaces</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Extended_Team_Workspaces__c</fullName>
        <description>My Extended Team Workspaces</description>
        <formula>IF (My_Workspace__c = 'True' ||   CONTAINS( PSS__r.Reporting_Up_Manager_Chain__c,$User.Alias) , "True", "False")</formula>
        <label>My Extended Team Workspaces</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Workspace__c</fullName>
        <description>Is the current user same as the workspace user</description>
        <formula>IF($User.Email = PSS_Email__c, "True", "False")</formula>
        <label>My Workspace</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCE_Completed_Date__c</fullName>
        <label>NCE Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Months__c</fullName>
        <formula>IF(ISBLANK(Workspace_Contract_Expiration_Date__c) &amp;&amp; ISBLANK(Workspace_Contract_Start_Date__c) 
, NULL 
, ( FLOOR((Workspace_Contract_Expiration_Date__c - Workspace_Contract_Start_Date__c)/30)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Service Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>